--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,10 +34,7 @@ on:
 #    - cron: 0 8 * * 5
 
 env:
-  REPO_URL: github.event.inputs.repo_url
-  REPO_BRANCH: github.event.inputs.repo_branch
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: github.event.inputs.config_file
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
@@ -72,7 +69,7 @@ jobs:
       working-directory: /workdir
       run: |
         df -hT $PWD
-        git clone $REPO_URL -b $REPO_BRANCH openwrt
+        git clone $INPUT_REPO_URL -b $INPUT_REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
     - name: Load custom feeds
@@ -91,7 +88,7 @@ jobs:
     - name: Load custom configuration
       run: |
         [ -e files ] && mv files openwrt/files
-        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        [ -e $INPUT_CONFIG_FILE ] && mv $INPUT_CONFIG_FILE openwrt/.config
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
